--- a/Project Management/Reports/2-25.md
+++ b/Project Management/Reports/2-25.md
@@ -1,22 +1,23 @@
-# **\[Report Template\]**
+# **Session Report**
 
-* **Date:** 2/25/2024
-* **Pomodoros:** 3
-* **Objectives:** Create a design document for the Scraper Component project. 
+- **Date:** 2/25/2024
+- **Pomodoros:** 3
+- **Objectives:** Create a design document for the Scraper Component project.
 
 ### **Version Control for the Design Process:**
 
-**Challenge Summary:** I want a system for creating and archiving documentation 
+**Challenge Summary:** I want a system for creating and archiving documentation
 
 **Attempt 1: Google docs**
-* **Summary:** I used google docs to paste generations from chatGPT, write my own design documents, and save them for later reading
-* **Outcome:** The writing process did not produce clear results, and I ended up with a large running notepad with a bunch of random ideas
-* **Reflection:** Google Docs does not have the archiving features necessary to create documentation. All its good for is making the documents themselves, but it doesn't even integrate well. Maybe I could look for a google docs plugin that saves markdown to git, but thats a tangent for a different time
 
+- **Summary:** I used google docs to paste generations from chatGPT, write my own design documents, and save them for later reading
+- **Outcome:** The writing process did not produce clear results, and I ended up with a large running notepad with a bunch of random ideas
+- **Reflection:** Google Docs does not have the archiving features necessary to create documentation. All its good for is making the documents themselves, but it doesn't even integrate well. Maybe I could look for a google docs plugin that saves markdown to git, but thats a tangent for a different time
 
 **Attempt 2: Markdown in vscode with Github**
-* **Summary:** I looked for a workflow using vscode to edit markdown. I looked into various visual markdown editing extensions.
-* **Outcome:** The default vscode markdown integration proved sufficient, I may look for an enhanced preview extensions or visual markdown editing extensions again later.
-* **Reflection:** Markdown in vscode, versioned on Git, seems like a very stable and well reasoned procedure for writing and maintaining design documents, even at scale with large teams.
+
+- **Summary:** I looked for a workflow using vscode to edit markdown. I looked into various visual markdown editing extensions.
+- **Outcome:** The default vscode markdown integration proved sufficient, I may look for an enhanced preview extensions or visual markdown editing extensions again later.
+- **Reflection:** Markdown in vscode, versioned on Git, seems like a very stable and well reasoned procedure for writing and maintaining design documents, even at scale with large teams.
 
 **Conclusion:** Creating a design document for my scraper project led me down a tangent of procedure, one which I will surely apply to the rest of the Quibble project. I dont believe I wasted time, because I feel like I have worked out a minor yet omnipresent roadblock in my design process.
